--- a/themes/next/languages/zh-CN.yml
+++ b/themes/next/languages/zh-CN.yml
@@ -86,7 +86,11 @@ reward:
   alipay: 支付宝
   paypal: PayPal
   bitcoin: 比特币
-  comment: 请我一杯咖啡吧！
+  ethereum: 以太坊
+  tron: 波场
+  arbitrum: 阿尔比垂姆
+  bnbsmartchain: 币安智能链
+  comment: 饿，投喂鼠鼠！
 follow_me:
   welcome: 欢迎关注我的其它发布渠道
 accessibility:
