--- a/themes/next/languages/zh-CN.yml
+++ b/themes/next/languages/zh-CN.yml
@@ -90,7 +90,7 @@ reward:
   tron: 波场
   arbitrum: 阿尔比垂姆
   bnbsmartchain: 币安智能链
-  comment: 投喂鼠鼠！
+  comment: 请我喝杯咖啡吧！
 follow_me:
   welcome: 欢迎关注我的其它发布渠道
 accessibility:
